fixed main content spacing

--- a/frontend/src/pages/homepage.css
+++ b/frontend/src/pages/homepage.css
@@ -71,6 +71,7 @@ body,h1,h2,h3,h4,h5,p{
 
 .main-content{
     text-align:center;
+    height:auto;
 }
 
 .main-content h1{
@@ -83,7 +84,6 @@ body,h1,h2,h3,h4,h5,p{
     background: #C7F9FC;
     background: linear-gradient(360deg, #C7F9FC 30%, rgba(0,212,255,0) 30%);
 }
-
 
 .main-content .buzzphrase{
     border:4px solid #2044F4;
